[package]
name = "p5-spy"
version = "0.0.1"
authors = ["Reini Urban <rurban@cpan.org>"]
repository = "https://github.com/rurban/p5-spy"
homepage = "https://github.com/rurban/p5-spy"
description = "Sampling profiler for Perl programs "
readme = "README.md"
exclude = ["images/*", "test_programs/*"]
license = "GPL-3.0"

[dependencies]
clap = "2"
console = "0.6.1"
indicatif = "0.9.0"
env_logger = "0.5"
failure = "0.1.1"
goblin = "0.0.15"
lazy_static = "1.1.0"
libc = "0.2.34"
log = "0.4"
regex = "1"
tempdir = "0.3"
tempfile = "3.0.3"
benfred-read-process-memory = "0.1.3"
proc-maps = "0.1"

[target.'cfg(unix)'.dependencies]
termios = "0.2.2"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["winbase", "consoleapi", "wincon", "handleapi", "timeapi", "processenv" ]}
